[gd_scene load_steps=10 format=2]

[ext_resource path="res://niveles/niveles_J/Nivel_4/space-with-stars-universe-space-infinity-and-starlight-background-starry-night-sky-galaxy-and-planets-in-cosmos-pattern-vector.jpg" type="Texture" id=1]
[ext_resource path="res://niveles/niveles_J/Nivel_4/Level_4.gd" type="Script" id=2]
[ext_resource path="res://niveles/niveles_J/Plataforma_1/Plataforma.tscn" type="PackedScene" id=3]
[ext_resource path="res://niveles/niveles_J/Transportador_1/Transportador.tscn" type="PackedScene" id=4]
[ext_resource path="res://niveles/niveles_J/base_2/Base.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/Ui.tscn" type="PackedScene" id=6]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=7]


[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 639, 1 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 143.352, 10 )

[node name="Level_4" type="Node2D"]
script = ExtResource( 2 )
Transportador = ExtResource( 4 )
Plataforma = ExtResource( 3 )

[node name="Background_TP" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background_TP"]
motion_mirroring = Vector2( 0, 1024 )

[node name="Sprite" type="Sprite" parent="Background_TP/ParallaxLayer"]
scale = Vector2( 1, 1.19276 )
texture = ExtResource( 1 )
centered = false

[node name="TPTimer" type="Timer" parent="."]

[node name="TPPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="TPPathFollow" type="PathFollow2D" parent="TPPath"]
rotation = 0.00156494

[node name="Area2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 23, 796 )

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2( 139.328, 18.9655 )
scale = Vector2( 1, 1 )
shape = SubResource( 2 )

[node name="Botones" parent="." instance=ExtResource( 6 )]

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 263, 148 )

[connection signal="timeout" from="TPTimer" to="." method="_on_TPTimer_timeout"]
